# feedback_bci_vr

./: CMakeLists.txt  package.xml
include/feedback_bci/: Training.h  TrialSequence.h
src/: Autopilot.cpp  Training.cpp  TrialSequence.cpp  training_node.cpp
unity_project_bci_pico4/Assets/: msgbrowser_settings.asset
unity_project_bci_pico4/Assets/MASH Virtual/Table/Material/: Plane.mat  Table New Mat.mat  Table Old Mat.mat
unity_project_bci_pico4/Assets/Materials/: BlurShared.shadergraph  FinishLine_Material.mat  cube_cvsa.mat
unity_project_bci_pico4/Assets/Resources/: ROSConnectionPrefab.prefab
unity_project_bci_pico4/Assets/RosMessages/Rosneuro/msg/: NeuroDataFloatMsg.cs  NeuroDataInfoMsg.cs  NeuroDataInt32Msg.cs  NeuroDecoderMsg.cs  NeuroEventMsg.cs  NeuroFrameMsg.cs  NeuroHeaderMsg.cs  NeuroOutputMsg.cs
unity_project_bci_pico4/Assets/Scenes/: BCI_CVSA.unity  BCI_HYBRID.unity  BCI_MI.unity  Starting_Menu.unity
unity_project_bci_pico4/Assets/XR/: XRGeneralSettingsPerBuildTarget.asset
unity_project_bci_pico4/Assets/scripts/: BCIUniversalController.cs  KeepAlive.cs  MenuManager.cs
unity_project_bci_pico4/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
